Fix Main Menu on tablet/mobile breakpoint and revert navbar.less
The @mobile media query has to be consistent with the navbar collapse breakpoint otherwise the Main Menu gonna appear messed up on tablet portrait.

--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -158,6 +158,10 @@ header {
   }
 }
 .navbar-header {
+  @media @tablet {
+	float: left;
+	width: 25%;
+  }
 
   @media @normal, @wide {
 	float: left;
