--- a/profiles/openenterprise/themes/bella/less/overrides.less
+++ b/profiles/openenterprise/themes/bella/less/overrides.less
@@ -1,3 +1,7 @@
+// Override Media query variables.
+// Ahmad: The @mobile media query has to be consistent with the navbar collapse breakpoint otherwise the Main Menu gonna appear messed up on tablet portrait.
+@mobile:  ~"screen and (max-width: @{grid-float-breakpoint-max})";
+
 body.admin-menu.navbar-is-fixed-top {
 	margin-top: 0 !important;
 }
